[gd_scene load_steps=8 format=2]

[ext_resource path="res://entities/world/Stealable.gd" type="Script" id=1]
[ext_resource path="res://assets/shaders/Glow.gdshader" type="Shader" id=2]
[ext_resource path="res://assets/shaders/Outline.gdshader" type="Shader" id=3]
[ext_resource path="res://assets/textures/spotlight-circle.png" type="Texture" id=4]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/color = Color( 0.87451, 0.517647, 0.647059, 1 )
shader_param/width = 10.0
shader_param/pattern = 0
shader_param/inside = false
shader_param/add_margins = true

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 2 )
shader_param/shine_color = Color( 1, 1, 1, 1 )
shader_param/shine_speed = 2.0
shader_param/shine_size = 0.02

[sub_resource type="CircleShape2D" id=1]
radius = 102.02

[node name="Stealable" type="Node2D"]
z_index = -1
script = ExtResource( 1 )

[node name="Light" type="Light2D" parent="."]
texture = ExtResource( 4 )
color = Color( 1, 1, 1, 0.47451 )
energy = 2.0
range_layer_min = -1
range_layer_max = 1
range_item_cull_mask = 17
shadow_enabled = true
shadow_color = Color( 0.0470588, 0.0431373, 0.0431373, 0 )
shadow_item_cull_mask = 48

[node name="PictureGlow" type="Sprite" parent="."]
visible = false
material = SubResource( 2 )

[node name="Picture" type="Sprite" parent="."]
material = SubResource( 3 )

[node name="Doodle" type="Sprite" parent="."]
visible = false

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
